# schafkopf-scheduler

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build_beachbooker.sh  ecr_login.sh  lambda_handler.py  main.py  pyproject.toml  run_beachbooker.sh  setup.cfg  todo.txt
.github/: CODEOWNERS
.github/workflows/: deploy.yml  scheduler.yml  web.yml
beachbooker/: Dockerfile  config.py  env.py  functions.py  gmail.py  lambda_handler.py  main.py
beachbooker/core/: functions.py  main.py  userdata.py
core/: env.py  log.py
core/gmail/: client.py  env.py  utils.py
ebg_scanner/: Dockerfile  lambda_handler.py
infrastructure/: cloudwatch.tf  data.tf  dynamodb.tf  ecr.tf  github_oidc.tf  lambda.tf  locals.tf  main.tf  modules.tf  tf_state.tf
infrastructure/api/: acm.tf  apigw.tf  cloudwatch.tf  data.tf  ecr.tf  lambda.tf  local.tf  route53.tf  vars.tf
infrastructure/beachbooker/: cloudwatch.tf  couldwatch.tf  ecr.tf  ecs.tf  lambda.tf  secret_manager.tf  vars.tf
infrastructure/ebg_scanner/: cloudwatch.tf  ecr.tf  lambda.tf
infrastructure/schedueler/: cloudwatch.tf  dynamodb.tf  ecr.tf  lambda.tf
infrastructure/web/: acm.tf  cloudfront.tf  data.tf  locals.tf  s3.tf  (+1 more)
scheduler/: bitpoll.py  env.py  gmail.py  scheduler.py
scripts/: add_email.py  poll.py
templates/: poll_invitation.html  schafkopf_scheduled.html  welcome_with_event_scheduled.html  welcome_with_poll_running.html
web/: .env  .swagger-codegen-ignore  package.json
whatsapp-client/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
(+72 files in other folders)
